--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -1246,71 +1246,32 @@
                         </div>
                     </div>
                 </div>
-                <div class="row">
-                    <div class="col-sm-12 col-md-4 card-dr">
-                        <div class="cam-dt">
-                            <div class="cam-tt-dt">Cam kết</div>
-                            <div class="content-cam-dt">
-                                <p>Sản phẩm cam kết chính hãng</p>
-                                <p>Bảo hành 12 tháng</p>
-                                <p>Đổi mới trong vòng 7 ngày</p>
-                                <p>Bảo hành qua tem sản phẩm hoặc hóa đơn thanh toán</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-8 card-dr">
-                        <div class="panel-heading">
-                            <div class="heading-dt">Khuyến mãi trong tháng 6</div>
-                            <div class="promo-detail">
-                                <p> Hỗ trợ lắp đặt, Setup trọn bộ Micro thu âm</p>
-
-                                <p> Hướng dẫn sử dụng phần mềm, phân tích loại bỏ tạp âm đem lại hiệu quả cao nhất</p>
-
-                                <p> Giảm giá&nbsp; 10% &nbsp;giá trị sản phẩm&nbsp; <a
-                                        href="https://boba.vn/tai-nghe-kiem-am-gia-re">tai nghe kiểm
-                                        âm</a>&nbsp; mua thêm</p>
-                                <p>&nbsp;<a
-                                        href="https://boba.vn/micro-thu-am-chuyen-nghiep/micro-thu-am-chuyen-nghiep-bm900"
-                                        target="_blank">Micro thu âm chuyên nghiệp BM900</a></p>
-
-                                <p>&nbsp;<a
-                                        href="https://boba.vn/soundcard-thu-am-chuyen-nghiep/souncard-thu-am-chuyen-nghiep-v8">Soundcard
-                                        thu âm chuyên nghiệp V8 hỗ trợ Autotone</a></p>
-
-                                <p>&nbsp;<a
-                                        href="http://boba.vn/chan-gia-kep-micro-thu-am/chan-de-kep-ban-gan-mic-thu-am">Chân
-                                        kẹp bàn kiêm giá đỡ micro</a></p>
-
-                                <p>&nbsp;<a href="https://boba.vn/micro-thu-am-chuyen-nghiep/man-loc-am-popshield">Màn
-                                        lọc âm Popshield</a></p>
-                            </div>
-                        </div>
-                    </div>
+                <div id="khuyen-mai" class="row">
                     <div class="col-sm-12 col-md-8 card-dr">
                         <span class="xuhms xu-huong">Xu Hướng mua sắm</span>
                         <div class="row category-mn bgr-dt">
-                            <div class="col-6 col-md-3">
+                            <div class="col-6 col-md-2">
                                 <a class="refz" href="#" title="#">
                                     <img src="https://gotrangtri.vn/wp-content/uploads/2020/11/ban-hoc-sinh.png"
                                         width="64px" height="64px">
                                     <p>Giường sắt hộp 5x10 giá rẻ miễn phí vận chuyển</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-md-3">
+                            <div class="col-6 col-md-2">
                                 <a class="refz" href="#" title="#">
                                     <img src="https://boba.vn/resize/h_60/san-pham/phu-kien-cong-nghe/phu-kien-dien-thoai-tablet/pin-sac-du-phong/q2123df.png"
                                         width="64px" height="64px">
                                     <p>Giường sắt hộp 5x10 giá rẻ miễn phí vận chuyển</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-md-3">
+                            <div class="col-6 col-md-2">
                                 <a class="refz" href="#" title="#">
                                     <img src="https://boba.vn/resize/h_60/san-pham/phu-kien-cong-nghe/phu-kien-dien-thoai-tablet/pin-sac-du-phong/q2123df.png"
                                         width="64px" height="64px">
                                     <p>Giường sắt hộp 5x10 giá rẻ miễn phí vận chuyển</p>
                                 </a>
                             </div>
-                            <div class="col-6 col-md-3">
+                            <div class="col-6 col-md-2">
                                 <a class="refz" href="#" title="#">
                                     <img src="https://boba.vn/resize/h_60/san-pham/phu-kien-cong-nghe/phu-kien-dien-thoai-tablet/pin-sac-du-phong/q2123df.png"
                                         width="64px" height="64px">
@@ -1462,6 +1423,20 @@
                     price_og: '1950000',
                     price_sale: '1750000'
                 },
+            ],
+            cam_ket:[
+                'Sản phẩm cam kết chính hãng',
+                'Bảo hành 12 tháng',
+                'Đổi mới trong vòng 7 ngày',
+                'Bảo hành qua tem sản phẩm hoặc hóa đơn thanh toán',
+            ],
+            khuyen_mai:[
+                "Hỗ trợ lắp đặt, Setup trọn bộ Micro thu âm",
+                "Hướng dẫn sử dụng phần mềm, phân tích loại bỏ tạp âm đem lại hiệu quả cao nhất",
+                'Giảm giá  10%  giá trị sản phẩm  <a href="#1">tai nghe kiểm âm</a>  mua thêm',
+                '<a href="#1">Micro thu âm chuyên nghiệp BM900</a>',
+                '<a href="#1">Soundcard thu âm chuyên nghiệp V8 hỗ trợ Autotone</a>',
+                '<a href="#1">Chân kẹp bàn kiêm giá đỡ micro</a>',
             ]
         };
         // localStorage.setItem("order_2", JSON.stringify(window.data));
