--- a/src/components/mmo_0/frontend_html/detail-v2.html
+++ b/src/components/mmo_0/frontend_html/detail-v2.html
@@ -1430,14 +1430,7 @@
                 'Đổi mới trong vòng 7 ngày',
                 'Bảo hành qua tem sản phẩm hoặc hóa đơn thanh toán',
             ],
-            khuyen_mai:[
-                "Hỗ trợ lắp đặt, Setup trọn bộ Micro thu âm",
-                "Hướng dẫn sử dụng phần mềm, phân tích loại bỏ tạp âm đem lại hiệu quả cao nhất",
-                'Giảm giá  10%  giá trị sản phẩm  <a href="#1">tai nghe kiểm âm</a>  mua thêm',
-                '<a href="#1">Micro thu âm chuyên nghiệp BM900</a>',
-                '<a href="#1">Soundcard thu âm chuyên nghiệp V8 hỗ trợ Autotone</a>',
-                '<a href="#1">Chân kẹp bàn kiêm giá đỡ micro</a>',
-            ]
+            khuyen_mai:'<p>Giảm giá 30% cho khách hàng mua giường kèm nệm tại: <a href="#12" target="_blank" rel="noopener"><strong>Giường giá rẻ</strong></a>.</p> <p><span style="color: rgb(186, 55, 42);"><strong>Tặng</strong></span> ngay <span style="color: rgb(186, 55, 42);"><strong>1 đèn học</strong></span> cho bé khi mua combo bàn học và ghế.</p> <p>Miễn phí vận chuyển cho khách hàng tại khu vực Hồ Chí Minh.</p>'
         };
         // localStorage.setItem("order_2", JSON.stringify(window.data));
     </script>
