--- a/src/components/mmo_0/frontend_html/category-v2.html
+++ b/src/components/mmo_0/frontend_html/category-v2.html
@@ -163,35 +163,35 @@
                                 <ul class="cart-u row">
 
                                     <li class="bv-cart col-6 col-md-4 col-xl-3 ">
-                                        <div class="a-bv"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
+                                        <div class="a-bv dbl-block"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
                                             <img class="lazyload" src="https://anbinhnew.com/wp-content/uploads/2023/04/giuong-ngu-giuong-sat-don-gian-mau-den-gia-re.jpg" width="100%">
                                             <a href="#" title="Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới">Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới</a>
                                             <p>Giường sắt giá rẻ là loại giường sắt miễn phí tại khu vực hồ Chí Minh, miễn phí vận cghuyeenr và lắp đặt tại khu vực Hồ Chí Minh, Giường được hỗ trợ miễn phí vận chuyển giá rẻ nhất hiện nay gà ơi là gà.</p>
                                         </div>
                                     </li>
                                     <li class="bv-cart col-6 col-md-4 col-xl-3 ">
-                                        <div class="a-bv"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
+                                        <div class="a-bv dbl-block"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
                                             <img class="lazyload" src="https://anbinhnew.com/wp-content/uploads/2023/04/giuong-ngu-giuong-sat-don-gian-mau-den-gia-re.jpg" width="100%">
                                             <a href="#" title="Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới">Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới</a>
                                             <p>Giường sắt giá rẻ là loại giường sắt miễn phí tại khu vực hồ Chí Minh, miễn phí vận cghuyeenr và lắp đặt tại khu vực Hồ Chí Minh, Giường được hỗ trợ miễn phí vận chuyển giá rẻ nhất hiện nay gà ơi là gà.</p>
                                         </div>
                                     </li>
                                     <li class="bv-cart col-6 col-md-4 col-xl-3 ">
-                                        <div class="a-bv"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
+                                        <div class="a-bv dbl-block"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
                                             <img class="lazyload" src="https://anbinhnew.com/wp-content/uploads/2023/04/giuong-ngu-giuong-sat-don-gian-mau-den-gia-re.jpg" width="100%">
                                             <a href="#" title="Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới">Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới</a>
                                             <p>Giường sắt giá rẻ là loại giường sắt miễn phí tại khu vực hồ Chí Minh, miễn phí vận cghuyeenr và lắp đặt tại khu vực Hồ Chí Minh, Giường được hỗ trợ miễn phí vận chuyển giá rẻ nhất hiện nay gà ơi là gà.</p>
                                         </div>
                                     </li>
                                     <li class="bv-cart col-6 col-md-4 col-xl-3 ">
-                                        <div class="a-bv"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
+                                        <div class="a-bv dbl-block"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
                                             <img class="lazyload" src="https://anbinhnew.com/wp-content/uploads/2023/04/giuong-ngu-giuong-sat-don-gian-mau-den-gia-re.jpg" width="100%">
                                             <a href="#" title="Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới">Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới</a>
                                             <p>Giường sắt giá rẻ là loại giường sắt miễn phí tại khu vực hồ Chí Minh, miễn phí vận cghuyeenr và lắp đặt tại khu vực Hồ Chí Minh, Giường được hỗ trợ miễn phí vận chuyển giá rẻ nhất hiện nay gà ơi là gà.</p>
                                         </div>
                                     </li>
                                     <li class="bv-cart col-6 col-md-4 col-xl-3 ">
-                                        <div class="a-bv"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
+                                        <div class="a-bv dbl-block"  title="Giường ống tròn đơn giản 1m6x2m" target="_blank" >
                                             <img class="lazyload" src="https://anbinhnew.com/wp-content/uploads/2023/04/giuong-ngu-giuong-sat-don-gian-mau-den-gia-re.jpg" width="100%">
                                             <a href="#" title="Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới">Giường ống tròn đơn giản 1m6x2m giá rẻ nhất hành tinh thế giới</a>
                                             <p>Giường sắt giá rẻ là loại giường sắt miễn phí tại khu vực hồ Chí Minh, miễn phí vận cghuyeenr và lắp đặt tại khu vực Hồ Chí Minh, Giường được hỗ trợ miễn phí vận chuyển giá rẻ nhất hiện nay gà ơi là gà.</p>
