--- a/src/components/mmo_0/lib/editer/editer.css
+++ b/src/components/mmo_0/lib/editer/editer.css
@@ -62,10 +62,23 @@
 .tox.tox-silver-sink.tox-tinymce-aux {
     z-index: 9999999999 !important;
   }
- 
-  /* .wrap-editer:hover .buttonz-editer{
-    opacity: 1 ;
-  }
-  .wrap-editer .eidex:hover + .buttonz-editer{
-    opacity: 0.5;
- } */
+.gpt-wrap{
+    position: fixed;
+    top: 10vh;
+    right: 12px;
+    z-index: 99999;
+    width: 170px;
+    padding: 5px;
+    background-color: aliceblue;
+}
+.mgt-gpt{
+    margin-bottom: 8px !important;
+    margin-top: 8px !important;
+}
+.mgt-gpt>i{
+    color: blue !important;
+}
+.wra-gpt{
+    overflow-y: scroll;
+    height: 500px;
+}
