--- a/src/components/mmo_0/post/post.css
+++ b/src/components/mmo_0/post/post.css
@@ -436,3 +436,10 @@ blockquote>p {
    border: none !important;
    box-shadow: none !important;
 }
+.psi{
+   box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
+   position: absolute;
+   height: 427px;
+   top: 5vh;
+   right: 0px;
+}
