--- a/src/components/mmo_0/post/post.css
+++ b/src/components/mmo_0/post/post.css
@@ -455,3 +455,20 @@ blockquote>p {
 .sdhs{
    text-align: right;
 }
+.timekiper{
+   font-size: 12px;
+   font-weight: 900;
+   color: #076cbe;
+}
+.timekiper b{
+   font-size: 18px;
+}
+.xxa>p{
+   margin-bottom: 50px;
+   line-height: 20px;
+}
+.ssx b{
+   font-size: 14px;
+   line-height: 23px;
+}
+ 
